--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>untoldcoding</title>
+    <title>phoenixx</title>
     <link rel="stylesheet" href="new.css" />
   </head>
   <body>
@@ -27,7 +27,7 @@
           <span class="ullu">
             Forever Yours,
             <br />
-            Ullu</span
+            chirkut</span
           >
         </p>
         <div class="address">
@@ -40,7 +40,8 @@
     </div>
 
     <footer>
-      <p>crafted by @untoldcoding.</p>
+      <p>crafted by phoenixx____19.</p>
     </footer>
   </body>
 </html>
+
